# m-dwarf-flares

./: .gitignore  MANIFEST.in  README.md  amplitude.txt  area.txt  bb.py  data_tools.py  distance.py  download_initial_data.py  duration.txt  eff_temp.csv  extinction_tools.py  feature_extraction.py  flares.py  flares_test.py  generator.py  getGaiaData.py  lc_tools.py  load_flare_db.py  m_dwarf_flare.py  mag.csv  main.py  plotSkyMap.py  plotting_tools.py  pyproject.toml  requirements.txt  sample.TEXT  setup.cfg  setup.py  spectra_tools.py  test.py  test_1.py  test_2.py  tools.py
.github/workflows/: test.yml
data_files/: dist.csv  dist_new.csv
docs/: data_tools.html  distance.html  extinction_tools.html  generator.html  lc_tools.html  plotting_tools.html  spectra_tools.html
lc_data/: KIC-1572802.csv  KIC-892376.csv
m_dwarf_flare/: __init__.py  __main__.py  _version.py  data_tools.py  distance.py  download_initial_data.py  extinction_tools.py  generator.py  lc_tools.py  load_flare_db.py  m_dwarf_flare.py  m_dwarf_flare_db.py  plotting_tools.py  simlib.py  spectra_tools.py
m_dwarf_flare/data/: LSST_rv_3_1.csv  __init__.py  aj403664t1_mrt.txt  data.py  data_tools.py
m_dwarf_flare/filters/: __init__.py  filters.py
sample/: sample.TEXT  test.TEXT
sample/flare_objects/: flare_sim_0.pkl  flare_sim_1.pkl  flare_sim_10.pkl  flare_sim_100.pkl  flare_sim_101.pkl  flare_sim_102.pkl  flare_sim_103.pkl  flare_sim_104.pkl  flare_sim_105.pkl  flare_sim_106.pkl  flare_sim_107.pkl  flare_sim_108.pkl  flare_sim_109.pkl  flare_sim_11.pkl  flare_sim_110.pkl  flare_sim_111.pkl  flare_sim_112.pkl  flare_sim_113.pkl  flare_sim_114.pkl  flare_sim_115.pkl  flare_sim_116.pkl  flare_sim_117.pkl  flare_sim_118.pkl  flare_sim_119.pkl  flare_sim_12.pkl  flare_sim_120.pkl  flare_sim_121.pkl  flare_sim_122.pkl  flare_sim_123.pkl  flare_sim_124.pkl  flare_sim_125.pkl  flare_sim_126.pkl  flare_sim_127.pkl  flare_sim_128.pkl  flare_sim_129.pkl  flare_sim_13.pkl  flare_sim_130.pkl  flare_sim_131.pkl  flare_sim_132.pkl  flare_sim_133.pkl  (+960 more)
simulation_features/: g.csv  i.csv  kep.csv  r.csv  u.csv  y.csv  z.csv
