[metadata]
name = m_dwarf_flare
;version = attr: src.VERSION
description = M-dwarf flare model for LSST
long_description = file: README.md
;keywords = one, two
;license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;    bin/generator.py
install_requires =
    astropy
    dustmaps
    lightkurve<2.0
    matplotlib
    numpy
    pandas
    progressbar2<3.53
    pyvo
    requests
    ch-vars @ git+https://github.com/uiucsn/ztf-dr-vars.git@cc5ee84fba1708573dd7b1a8789eba872d98a623

[options.entry_points]
console_scripts =
    mdwarf-download-data = m_dwarf_flare.download_initial_data:download_all

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3