[metadata]
name = m_dwarf_flare
;version = attr: src.VERSION
description = M-dwarf flare model for LSST
long_description = file: README.md
;keywords = one, two
;license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;    bin/generator.py
install_requires =
    astropy==4.2.1
    dustmaps
    lightkurve<2.0
    matplotlib
    numpy
    pandas
    progressbar2<3.53
    pyvo
    requests
    healpy
    astropy_healpix
    ch-vars @ git+ssh://git@github.com/uiucsn/ztf-dr-vars.git@cc5ee84fba1708573dd7b1a8789eba872d98a623

[options.entry_points]
console_scripts =
    mdwarf-sim = m_dwarf_flare.__main__:main
    mdwarf-db-to-lclib = m_dwarf_flare.m_dwarf_flare_db:main
    mdwarf-db-to-density-map = m_dwarf_flare.m_dwarf_flare_db:db_to_density_map
    mdwarf-fits-ci-flares-to-lclib = m_dwarf_flare.m_dwarf_flare_db:gw_event_localized_flares
    mdwarf-localize-for-KN = m_dwarf_flare.m_dwarf_flare_db:localize_flares_for_KN
    mdwarf-download-data = m_dwarf_flare.download_initial_data:download_all

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3